--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </style>
 </head>
 <body>
-  <h1>Test, Canopy Website</h1>
+  <h1>Test2, Canopy Website</h1>
   <p>Data and Live Stream Coming Soon!</p>
   <img src="images/pictest00.jpg" alt="canopy Image" class="main-image">
   <video id="cam" controls autoplay muted playsinline></video>
