--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Live</title>
+  <style>html,body{margin:0;height:100%} video{width:100%;height:100%;object-fit:contain}</style>
+</head>
+<body>
+  <video controls autoplay playsinline
+    src="https://customer-i32my3qs0ldoeuy3.cloudflarestream.com/c0c327782cd0701b6d78dd33526706e3/manifest/video.m3u8">
+  </video>
+</body>
+</html>
