--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Live</title>
-  <style>html,body{margin:0;height:100%} video{width:100%;height:100%;object-fit:contain}</style>
+  <title>Live (HLS.js)</title>
+  <style>html,body{margin:0;height:100%} #v{width:100%;height:100%;object-fit:contain;background:#000}</style>
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 </head>
 <body>
-  <video controls autoplay playsinline
-    src="https://customer-i32my3qs0ldoeuy3.cloudflarestream.com/c0c327782cd0701b6d78dd33526706e3/manifest/video.m3u8">
-  </video>
+  <video id="v" controls autoplay muted playsinline></video>
+  <script>
+    const src = "https://customer-i32my3qs0ldoeuy3.cloudflarestream.com/c0c327782cd0701b6d78dd33526706e3/manifest/video.m3u8";
+    const video = document.getElementById('v');
+
+    if (Hls.isSupported()) {
+      const hls = new Hls({lowLatencyMode:false, liveSyncDurationCount:3});
+      hls.loadSource(src);
+      hls.attachMedia(video);
+      hls.on(Hls.Events.ERROR, (e,d)=>console.warn('hls.js error', d));
+    } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
+      // Safari / iOS
+      video.src = src;
+    } else {
+      video.outerHTML = '<p style="color:#fff;background:#000;padding:1rem">HLS not supported in this browser.</p>';
+    }
+  </script>
 </body>
 </html>
