--- a/index.html
+++ b/index.html
@@ -1,28 +1,61 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Live (HLS.js)</title>
-  <style>html,body{margin:0;height:100%} #v{width:100%;height:100%;object-fit:contain;background:#000}</style>
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DWTB Solar Canopy</title>
+  <style>
+    body { font-family: Arial, sans-serif; text-align: center; background:#f5f7fa; color:#222; padding:20px; margin:0; }
+    h1 { font-size:2.5em; margin-bottom:.5em; }
+    p  { font-size:1.2em; color:#555; }
+    .main-image { margin-top:20px; width:90%; max-width:600px; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,.1); }
+    #cam { width:100%; max-width:640px; height:auto; margin:20px auto; display:block; border-radius:8px; box-shadow:0 4px 10px rgba(0,0,0,.2); background:#000; }
+    .note { font-size:.95em; color:#666; margin-top:8px; }
+    @media (max-width:768px){ h1{font-size:1.8em;} #cam{max-width:100%;} }
+  </style>
 </head>
 <body>
-  <video id="v" controls autoplay muted playsinline></video>
-  <script>
-    const src = "https://customer-i32my3qs0ldoeuy3.cloudflarestream.com/c0c327782cd0701b6d78dd33526706e3/manifest/video.m3u8";
-    const video = document.getElementById('v');
+  <h1>Test, Canopy Website</h1>
+  <p>Data and Live Stream Coming Soon!</p>
+  <img src="images/pictest00.jpg" alt="canopy Image" class="main-image" />
 
-    if (Hls.isSupported()) {
-      const hls = new Hls({lowLatencyMode:false, liveSyncDurationCount:3});
-      hls.loadSource(src);
+  <video id="cam" controls autoplay muted playsinline></video>
+  <div id="status" class="note">If the stream is offline, it will try to reconnect automatically.</div>
+
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <script>
+    // Cloudflare Live Input (HLS) — plays the current live broadcast
+    const HLS_URL = "https://customer-i32my3qs0ldoeuy3.cloudflarestream.com/c0c327782cd0701b6d78dd33526706e3/manifest/video.m3u8";
+    const video = document.getElementById("cam");
+    const statusEl = document.getElementById("status");
+
+    function setStatus(msg){ if(statusEl) statusEl.textContent = msg; }
+
+    // Safari/iOS: native HLS
+    if (video.canPlayType("application/vnd.apple.mpegurl")) {
+      video.src = HLS_URL;
+      video.addEventListener("loadedmetadata", () => video.play().catch(()=>{}));
+      video.addEventListener("error", () => setStatus("Player error — retrying…"));
+    } else if (window.Hls && Hls.isSupported()) {
+      const hls = new Hls({ lowLatencyMode: false, liveSyncDurationCount: 3 });
       hls.attachMedia(video);
-      hls.on(Hls.Events.ERROR, (e,d)=>console.warn('hls.js error', d));
-    } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
-      // Safari / iOS
-      video.src = src;
+      hls.on(Hls.Events.MEDIA_ATTACHED, () => hls.loadSource(HLS_URL));
+
+      // Basic robustness
+      hls.on(Hls.Events.ERROR, (_, data) => {
+        if (data.fatal) {
+          console.warn("hls.js fatal error", data);
+          if (data.type === Hls.ErrorTypes.NETWORK_ERROR) {
+            setStatus("Network error — reconnecting…"); hls.startLoad();
+          } else if (data.type === Hls.ErrorTypes.MEDIA_ERROR) {
+            setStatus("Media error — recovering…"); hls.recoverMediaError();
+          } else {
+            setStatus("Fatal error — reloading…"); setTimeout(()=>location.reload(), 3000);
+          }
+        }
+      });
     } else {
-      video.outerHTML = '<p style="color:#fff;background:#000;padding:1rem">HLS not supported in this browser.</p>';
+      video.outerHTML = '<p>Your browser does not support HLS playback.</p>';
     }
   </script>
 </body>
