--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 </head>
 <body>
   <h1>DWTB Solar Canopy</h1>
-  <p>Real-time monitoring and live stream</p>
+  <p>Real-time2 monitoring and live stream</p>
   <img src="images/pictest00.jpg" alt="Canopy Image" class="main-image" />
 
   <!-- Live Stream Section -->
