--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@
     <div class="graph-container">
       <h3>📊 Historical Data</h3>
       <div class="graph-controls">
-        <button class="time-range-btn active" data-range="60">Last Hour</button>
-        <button class="time-range-btn" data-range="180">Last 3 Hours</button>
+        <button class="time-range-btn active" data-range="60">Last 10 Min</button>
+        <button class="time-range-btn" data-range="180">Last 30 Min</button>
         <button class="time-range-btn" data-range="all">All Data</button>
       </div>
       <canvas id="sensor-chart"></canvas>
