--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
   <h1>DWTB Solar Canopy</h1>
   <p>Real-time monitoring with dual camera live streams</p>
   //<img src="images/pictest00.jpg" alt="Canopy Image" class="main-image" />
-  <img src="images/pictest00.jpg" alt="Canopy Image" class="main-image" />
+  <img src="images/cover_pic.JPEG" alt="Canopy Image" class="main-image" />
 
   <!-- Sensor Data Display -->
   <div class="sensor-container">
